<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/string_favourite" />

    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_language"
        android:title="@string/string_language" />

    <item
        android:id="@+id/menu_rate"
        android:icon="@drawable/ic_rate"
        android:title="@string/string_rate" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/string_about" />

    <item
        android:id="@+id/menu_policy"
        android:icon="@drawable/ic_policy"
        android:title="@string/string_policy" />

</menu>